<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <!-- This xml represents a new registration form with fields based
         on the website. Created by Kostas Dimkas at 17/12/2014.
         Modified by Alex Allafi at 18/12/2014. -->
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        style="@style/title_style"
        android:gravity="center"
        android:text="@string/register_title"
        android:id="@+id/textView14"
        android:layout_gravity="center_horizontal" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|start"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:columnCount="2"
        android:rowCount="3"
        android:layout_marginBottom="10dp"

        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username_choice"
            android:id="@+id/username"
            android:layout_columnSpan="1"
            android:layout_row="0"
            android:layout_column="0"/>

        <EditText
            android:layout_width="wrap_content"
            android:hint="@string/default_username"
            style="@style/hints_style"
            android:id="@+id/editText"
            android:inputType="textPersonName"
            android:layout_row="0"
            android:layout_column="1"
            android:ems="10"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_choice"
            android:id="@+id/passwordTextView"
            android:layout_row="1"
            android:layout_column="0" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/hints_style"
            android:hint="@string/default_password"
            android:inputType="textPassword"
            android:id="@+id/password_view"
            android:layout_row="1"
            android:layout_column="1"
            android:ems="10"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_choice"
            android:id="@+id/emailTextView"
            android:layout_row="2"
            android:layout_column="0" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/hints_style"
            android:hint="@string/default_email"
            android:inputType="textEmailAddress"
            android:id="@+id/email_view"
            android:layout_row="2"
            android:layout_column="1"
            android:ems="10"/>

    </GridLayout>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/register_button"
        android:id="@+id/register_button"
        android:layout_gravity="center_horizontal" />

</LinearLayout>