<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/background_color"
    tools:context=".Main">
    <!-- The main activity xml file. Contains the basic options for the user
         following the website color concept. Created by Manolis Kirtas on 17/12/2014 -->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sid"
        android:gravity="center"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnSpan="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_title"
            style="@style/main_title_style"
            android:gravity="center"
            android:id="@+id/textEasyTicket" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:text="@string/login_choice"
            android:id="@+id/loginButton1" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/register_choice"
            android:id="@+id/registrationButton1" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/about_choice"
            android:id="@+id/aboutButton1" />

        <Button
            android:layout_width="fill_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:text="@string/contact_choice"
            android:id="@+id/contactButton1" />
    </LinearLayout>


</RelativeLayout>
